// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rdme docs upload > given that the file path is a directory > given that the directory contains parent/child docs > should upload parents before children 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/docs/multiple-docs/friend.md",
        "response": {},
        "result": "created",
        "slug": "friend",
      },
      {
        "filePath": "__tests__/__fixtures__/docs/multiple-docs/grandparent.md",
        "response": {},
        "result": "created",
        "slug": "grandparent",
      },
      {
        "filePath": "__tests__/__fixtures__/docs/multiple-docs/parent.md",
        "response": {},
        "result": "created",
        "slug": "parent",
      },
      {
        "filePath": "__tests__/__fixtures__/docs/multiple-docs/child.md",
        "response": {},
        "result": "created",
        "slug": "child",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": "",
  "stdout": "🌱 Successfully created 4 page(s) in ReadMe:
   - friend (__tests__/__fixtures__/docs/multiple-docs/friend.md)
   - grandparent (__tests__/__fixtures__/docs/multiple-docs/grandparent.md)
   - parent (__tests__/__fixtures__/docs/multiple-docs/parent.md)
   - child (__tests__/__fixtures__/docs/multiple-docs/child.md)
",
}
`;

exports[`rdme docs upload > given that the file path is a directory > should create a guides page in ReadMe for each file in the directory and its subdirectories 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/docs/existing-docs/simple-doc.md",
        "response": {},
        "result": "created",
        "slug": "simple-doc",
      },
      {
        "filePath": "__tests__/__fixtures__/docs/existing-docs/subdir/another-doc.md",
        "response": {},
        "result": "created",
        "slug": "another-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": "",
  "stdout": "🌱 Successfully created 2 page(s) in ReadMe:
   - simple-doc (__tests__/__fixtures__/docs/existing-docs/simple-doc.md)
   - another-doc (__tests__/__fixtures__/docs/existing-docs/subdir/another-doc.md)
",
}
`;

exports[`rdme docs upload > given that the file path is a directory > should error out if the directory does not contain any Markdown files 1`] = `
{
  "error": [Error: The directory you provided (__tests__/__fixtures__/ref-oas) doesn't contain any of the following file extensions: .markdown, .md.],
  "stderr": "",
  "stdout": "",
}
`;

exports[`rdme docs upload > given that the file path is a directory > should handle a mix of creates and updates and failures and skipped files 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/docs/mixed-docs/invalid-attributes.md",
        "response": {},
        "result": "created",
        "slug": "invalid-attributes",
      },
    ],
    "failed": [
      {
        "error": [APIv2Error: Error uploading __tests__/__fixtures__/docs/mixed-docs/new-doc-slug.md:

The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.],
        "filePath": "__tests__/__fixtures__/docs/mixed-docs/new-doc-slug.md",
        "result": "failed",
        "slug": "some-slug",
      },
      {
        "error": [APIv2Error: Error uploading __tests__/__fixtures__/docs/mixed-docs/simple-doc.md:

The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.],
        "filePath": "__tests__/__fixtures__/docs/mixed-docs/simple-doc.md",
        "result": "failed",
        "slug": "simple-doc",
      },
    ],
    "skipped": [
      {
        "filePath": "__tests__/__fixtures__/docs/mixed-docs/doc-sans-attributes.md",
        "response": null,
        "result": "skipped",
        "slug": "doc-sans-attributes",
      },
    ],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/docs/mixed-docs/legacy-category.md",
        "response": {},
        "result": "updated",
        "slug": "legacy-category",
      },
    ],
  },
  "stderr": " ›   Warning: 1 file(s) have issues that can be fixed automatically.
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - invalid-attributes (__tests__/__fixtures__/docs/mixed-docs/invalid-attributes.md)
🔄 Successfully updated 1 page(s) in ReadMe:
   - legacy-category (__tests__/__fixtures__/docs/mixed-docs/legacy-category.md)
Skipped 1 page(s) in ReadMe due to no front matter data:
   - doc-sans-attributes (__tests__/__fixtures__/docs/mixed-docs/doc-sans-attributes.md)
Failed to upload the following 2 page(s):
",
}
`;

exports[`rdme docs upload > given that the file path is a directory > should update existing guides pages in ReadMe for each file in the directory and its subdirectories 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/docs/existing-docs/simple-doc.md",
        "response": {},
        "result": "updated",
        "slug": "simple-doc",
      },
      {
        "filePath": "__tests__/__fixtures__/docs/existing-docs/subdir/another-doc.md",
        "response": {},
        "result": "updated",
        "slug": "another-doc",
      },
    ],
  },
  "stderr": "",
  "stdout": "🔄 Successfully updated 2 page(s) in ReadMe:
   - simple-doc (__tests__/__fixtures__/docs/existing-docs/simple-doc.md)
   - another-doc (__tests__/__fixtures__/docs/existing-docs/subdir/another-doc.md)
",
}
`;

exports[`rdme docs upload > given that the file path is a single file > and the command is being run in a CI environment > should error out if the file has validation errors 1`] = `
{
  "error": [Error: 1 file(s) have issues that should be fixed before uploading to ReadMe. Please run \`rdme docs upload __tests__/__fixtures__/docs/mixed-docs/legacy-category.md --dry-run\` in a non-CI environment to fix them.],
  "stderr": "",
  "stdout": "",
}
`;

exports[`rdme docs upload > given that the file path is a single file > given that the slug is passed in the front matter > should use that slug to create a page in ReadMe 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/docs/slug-docs/new-doc-slug.md",
        "response": {},
        "result": "created",
        "slug": "some-slug",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": "",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - some-slug (__tests__/__fixtures__/docs/slug-docs/new-doc-slug.md)
",
}
`;

exports[`rdme docs upload > given that the file path is a single file > given that the slug is passed in the front matter > should use that slug update an existing guides page in ReadMe 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/docs/slug-docs/new-doc-slug.md",
        "response": {},
        "result": "updated",
        "slug": "some-slug",
      },
    ],
  },
  "stderr": "",
  "stdout": "🔄 Successfully updated 1 page(s) in ReadMe:
   - some-slug (__tests__/__fixtures__/docs/slug-docs/new-doc-slug.md)
",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should allow for user to specify version via --version flag 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/docs/new-docs/new-doc.md",
        "response": {},
        "result": "created",
        "slug": "new-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": "",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - new-doc (__tests__/__fixtures__/docs/new-docs/new-doc.md)
",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should create a guides page in ReadMe 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/docs/new-docs/new-doc.md",
        "response": {},
        "result": "created",
        "slug": "new-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": "",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - new-doc (__tests__/__fixtures__/docs/new-docs/new-doc.md)
",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should error out if a non-404 error is returned from the HEAD request 1`] = `
{
  "error": [APIv2Error: Error uploading __tests__/__fixtures__/docs/new-docs/new-doc.md:

The ReadMe API responded with an unexpected error. Please try again and if this issue persists, get in touch with us at support@readme.io.],
  "stderr": "",
  "stdout": "",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should error out if the file does not exist 1`] = `
{
  "error": [Error: Oops! We couldn't locate a file or directory at the path you provided.],
  "stderr": "",
  "stdout": "",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should error out if the file has an invalid file extension 1`] = `
{
  "error": [Error: Invalid file extension (.json). Must be one of the following: .markdown, .md],
  "stderr": "",
  "stdout": "",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should exit if the user declines to fix the issues 1`] = `
{
  "error": [Error: Aborting upload due to user input.],
  "stderr": " ›   Warning: 1 file(s) have issues that can be fixed automatically.
",
  "stdout": "",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should fix the front matter issues in the file and create the corrected file in ReadMe 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/docs/mixed-docs/legacy-category.md",
        "response": {},
        "result": "created",
        "slug": "legacy-category",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: 1 file(s) have issues that can be fixed automatically.
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - legacy-category (__tests__/__fixtures__/docs/mixed-docs/legacy-category.md)
",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should not create anything in ReadMe if the --dry-run flag is passed 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/docs/new-docs/new-doc.md",
        "response": null,
        "result": "created",
        "slug": "new-doc",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": "",
  "stdout": "Dry run complete. No changes were made to ReadMe.
🌱 The following 1 page(s) do not currently exist in ReadMe and will be created:
   - new-doc (__tests__/__fixtures__/docs/new-docs/new-doc.md)
",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should not update anything in ReadMe if the --dry-run flag is passed 1`] = `
{
  "result": {
    "created": [],
    "failed": [],
    "skipped": [],
    "updated": [
      {
        "filePath": "__tests__/__fixtures__/docs/slug-docs/new-doc-slug.md",
        "response": null,
        "result": "updated",
        "slug": "some-slug",
      },
    ],
  },
  "stderr": "",
  "stdout": "Dry run complete. No changes were made to ReadMe.
🔄 The following 1 page(s) already exist in ReadMe and will be updated:
   - some-slug (__tests__/__fixtures__/docs/slug-docs/new-doc-slug.md)
",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should skip client-side validation if the --skip-validation flag is passed 1`] = `
{
  "error": [APIv2Error: Error uploading __tests__/__fixtures__/docs/mixed-docs/legacy-category.md:

The ReadMe API returned the following error:

bad request

your category is whack],
  "stderr": " ›   Warning: Skipping pre-upload validation of the Markdown file(s). This is 
 ›   not recommended.
",
  "stdout": "",
}
`;

exports[`rdme docs upload > given that the file path is a single file > should warn user if the file has no autofixable issues 1`] = `
{
  "result": {
    "created": [
      {
        "filePath": "__tests__/__fixtures__/docs/mixed-docs/invalid-attributes.md",
        "response": {},
        "result": "created",
        "slug": "invalid-attributes",
      },
    ],
    "failed": [],
    "skipped": [],
    "updated": [],
  },
  "stderr": " ›   Warning: 1 file(s) have front matter issues that cannot be fixed 
 ›   automatically. The upload will proceed but we recommend addressing these 
 ›   issues. Please get in touch with us at support@readme.io if you need a 
 ›   hand.
",
  "stdout": "🌱 Successfully created 1 page(s) in ReadMe:
   - invalid-attributes (__tests__/__fixtures__/docs/mixed-docs/invalid-attributes.md)
",
}
`;
